@@ -12,6 +12,7 @@
   * improved recaching of repos (taking latest updates from .ckr.json into account)
   * blocked copying of repositories to avoid duplication of CK entries
   * added "ck python_version" to print Python version used by CK
+  * now when calling ck without arguments, it will print just a short help
 
 * V1.9.4
   * fixed minor bug when searching repo by UID when repo doesn't exist
